--- a/index.html
+++ b/index.html
@@ -88,6 +88,19 @@
 									</ul>
 								</article>
 
+
+								<article>
+									<header>
+										<h2><a href="https://github.com/9larisa/PortfolioProjects/blob/main/Sales%20Analysis.ipynb">Sales Analysis<br />
+										</a></h2>
+									</header>
+									<a href="https://github.com/9larisa/PortfolioProjects/blob/main/Sales%20Analysis.ipynb" class="image fit"><img src="images/header-2.png" alt="" /></a>
+									<p>Analysis of Sales of Technical Goods in the US.</p>
+									<ul class="actions special">
+										<li><a href="https://github.com/9larisa/PortfolioProjects/blob/main/Sales%20Analysis.ipynb" class="button">View Project</a></li>
+									</ul>
+								</article>
+
 						
 						<section class="split contact">
 							<section class="alt">
