--- a/index.html
+++ b/index.html
@@ -89,6 +89,10 @@
 								</article>
 
 
+
+							<!-- Posts -->
+							<section class="posts">
+								
 								<article>
 									<header>
 										<h2><a href="https://github.com/9larisa/PortfolioProjects/blob/main/Sales%20Analysis.ipynb">Sales Analysis<br />
