--- a/index.html
+++ b/index.html
@@ -105,6 +105,9 @@
 									</ul>
 								</article>
 
+						<!-- Posts -->
+							<section class="posts">		
+
 						
 						<section class="split contact">
 							<section class="alt">
