--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 									</a></h2>
 									<p>Analysis of Diabetes Dataset with Python.</p>
 								</header>
-								<a href="#" class="image main"><img src="diabetes.jpg" alt="" /></a>
+								<a href="#" class="image main"><img src="images/diabetes.jpg" alt="" /></a>
 								<ul class="actions special">
 									<li><a href="https://github.com/9larisa/PortfolioProjects/blob/main/Diabetes%20Analysis.html" class="button large">View project</a></li>
 								</ul>
