--- a/index.html
+++ b/index.html
@@ -78,18 +78,18 @@
 
 								<article>
 									<header>
-										<h2><a href="https://public.tableau.com/app/profile/larisa7348/vizzes">Tableau Projects<br />
+										<h2><a href="https://github.com/9larisa/PortfolioProjects/blob/main/COVID%20Project">Data Exploration in SQL<br />
 										</a></h2>
 									</header>
-									<a href="https://public.tableau.com/app/profile/larisa7348/vizzes" class="image fit"><img src="images/tab.jpeg" alt="" /></a>
-									<p>Tableau Dashboards.</p>
+									<a href="https://github.com/9larisa/PortfolioProjects/blob/main/COVID%20Project" class="image fit"><img src="images/covid 19.png" alt="" /></a>
+									<p>Data Exploration of Covid 19 Dataset in SQL Server.</p>
 									<ul class="actions special">
-										<li><a href="https://public.tableau.com/app/profile/larisa7348/vizzes" class="button">View Project</a></li>
+										<li><a href="https://github.com/9larisa/PortfolioProjects/blob/main/COVID%20Project" class="button">View Project</a></li>
 									</ul>
 								</article>
 
 
-								<!-- Posts -->
+						<!-- Posts -->
 							<section class="posts">
 								<article>
 									<header>
@@ -103,21 +103,6 @@
 									</ul>
 								</article>
 
-
-								<article>
-									<header>
-										<h2><a href="https://public.tableau.com/app/profile/larisa7348/vizzes">Tableau Projects<br />
-										</a></h2>
-									</header>
-									<a href="https://public.tableau.com/app/profile/larisa7348/vizzes" class="image fit"><img src="images/tab.jpeg" alt="" /></a>
-									<p>Tableau Dashboards.</p>
-									<ul class="actions special">
-										<li><a href="https://public.tableau.com/app/profile/larisa7348/vizzes" class="button">View Project</a></li>
-									</ul>
-								</article>
-
-                        <!-- Posts -->
-							<section class="posts">
 
 								<article>
 									<header>
