--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 								</header>
 								<a href="#" class="image main"><img src="images/diabetes.jpg" alt="" /></a>
 								<ul class="actions special">
-									<li><a href="https://github.com/9larisa/PortfolioProjects/blob/main/Diabetes%20Analysis.html" class="button large">View project</a></li>
+									<li><a href="https://github.com/9larisa/PortfolioProjects/blob/main/Diabetes%20Analysis.ipynb" class="button large">View project</a></li>
 								</ul>
 							</article>
 
@@ -93,13 +93,13 @@
 							<section class="posts">
 								<article>
 									<header>
-										<h2><a href="https://github.com/9larisa/PortfolioProjects/blob/main/COVID%20Project">Data Exploration in SQL<br />
+										<h2><a href="https://public.tableau.com/app/profile/larisa7348/vizzes">Tableau Projects<br />
 										</a></h2>
 									</header>
-									<a href="https://github.com/9larisa/PortfolioProjects/blob/main/COVID%20Project" class="image fit"><img src="images/covid 19.png" alt="" /></a>
-									<p>Data Exploration of Covid 19 Dataset in SQL Server.</p>
+									<a href="https://public.tableau.com/app/profile/larisa7348/vizzes" class="image fit"><img src="images/tab.jpeg" alt="" /></a>
+									<p>Tableau Dashboards.</p>
 									<ul class="actions special">
-										<li><a href="https://github.com/9larisa/PortfolioProjects/blob/main/COVID%20Project" class="button">View Project</a></li>
+										<li><a href="https://public.tableau.com/app/profile/larisa7348/vizzes" class="button">View Project</a></li>
 									</ul>
 								</article>
 
